# PSRN_official

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml  push-and-pr.yml  python-publish.yml
psrn/: __init__.py  cli.py  run_custom_data.py
psrn/data/: README.md
psrn/dr_mask/: 2_10_[Add_Mul_Div_Identity_Exp_Log]_mask.npy  2_4_[Add_Mul_Div_Identity_Sqrt_Exp_Log]_mask.npy  2_5_[Add_Mul_Div_Identity_Exp_Log_Sqrt]_mask.npy  2_6_[Add_Mul_Div_Identity_Inv_Sqrt_Exp_Log]_mask.npy  2_6_[Add_Mul_Div_Identity_Sqrt_Exp_Log]_mask.npy  3_1_[Add_Mul_Div_Identity_Exp_Log_Sqrt]_mask.npy  3_2_[Add_Mul_Sub_Div_Identity_Sin_Exp]_mask.npy  3_3_[Add_Mul_Div_Identity]_mask.npy  3_3_[Add_Mul_Div_Identity_Exp_Log_Sqrt]_mask.npy  3_3_[Add_Mul_Sub]_mask.npy  3_3_[Add_Mul_Sub_Div_Identity_Sin_Exp]_mask.npy  3_3_[Add_Mul_Sub_Div_Identity_Sin_Exp_Sign]_mask.npy  3_3_[Add_Mul_Sub_Div_Identity_Sin_Sign]_mask.npy  3_3_[Add_Mul_Sub_Div_Identity_Tanh_Abs]_mask.npy  3_3_[Add_Mul_Sub_Div_Identity_Tanh_Sin]_mask.npy  3_3_[Mul_Identity_Tanh_Abs]_mask.npy  3_3_[Sigmoid_Identity]_mask.npy  3_4_[Add_Mul_Div_Identity_Exp_Log_Sqrt]_mask.npy  3_5_[Add_Mul_Div_Identity_Exp_Log_Sqrt]_mask.npy  3_5_[Add_Mul_Div_Identity_Sqrt_Exp_Log]_mask.npy  3_5_[Add_Mul_Sub_Div_Identity_Tanh_Abs]_mask.npy  3_5_[Add_Mul_Sub_Identity_Tanh_Abs]_mask.npy  3_5_[Mul_Identity_Tanh_Abs]_mask.npy  3_6_[Add_Mul_Div_Identity_Exp_Log_Sqrt]_mask.npy  3_6_[Add_Mul_Div_Identity_Sqrt_Exp_Log]_mask.npy  3_6_[Add_Mul_Log_Identity]_mask.npy  3_8_[Add_Mul_Div_Identity_Sqrt_Exp_Log]_mask.npy
psrn/model/: operators.py  regressor.py
psrn/model/token_generator/: gp.py
psrn/model/token_generator/GP/model/: config.py
psrn/model/token_generator/GP/model/expr_utils/: calculator.py  utils.py
psrn/model/token_generator/GP/model/ga/: agent.py  ga.py
psrn/utils/: data.py  evaluate.py  exprutils.py  gen_dr_mask.py
test/: custom_data2.csv  run_custom_data.py
