[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psrn"
version = "0.1.0"
description = "Parallel Symbolic Regression Network (PSRN) / Parallel Symbolic Enumeration (PSE)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Kai Ruan", email = "kairuan@ruc.edu.cn"}
]
keywords = ["symbolic regression", "AI4Science", "pytorch", "scientific discovery"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "deap==1.3.3",
    "numpy",
    "pandas",
    "scikit-learn",
    "PyYAML",
    "sympy",
    "numba",
    "tqdm",
    "scipy",
    "symengine==0.11.0"
]

[project.urls]
"Homepage" = "https://github.com/intell-sci-comput/PTS"
"Paper" = "https://arxiv.org/abs/2407.04405"

[tool.setuptools.packages.find]
include = ["psrn*"]
exclude = ["assets*"]

[tool.setuptools.package-data]
"psrn" = ["**/*.npy"]

[project.scripts]
psrn-run = "psrn.cli:main"