[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psrn"
version = "0.1.2"
description = "Parallel Symbolic Regression Network (PSRN) / Parallel Symbolic Enumeration (PSE)"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Kai Ruan", email = "kairuan@ruc.edu.cn"}
]
keywords = ["symbolic regression", "AI4Science", "pytorch", "scientific discovery"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "deap==1.3.3",
    "numpy",
    "pandas",
    "scikit-learn",
    "PyYAML",
    "sympy",
    "numba",
    "tqdm",
    "scipy",
    "click",
    "symengine==0.11.0"
]

[project.urls]
"Homepage" = "https://github.com/x66ccff/PSRN"
"Paper" = "https://www.nature.com/articles/s43588-025-00904-8"

[tool.setuptools.packages.find]
include = ["psrn*"]
exclude = ["assets*"]

[tool.setuptools.package-data]
"psrn" = ["**/*.npy","**/*.csv"]

[project.scripts]
psrn-run = "psrn.cli:main"